src/main/java/parser/SQLParser.java
package parser;
// Generated from SQL.g4 by ANTLR 4.9
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SQLParser extends Parser {
    static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9,
            T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17,
            T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24,
            T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31,
            T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38,
            T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45,
            T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, EqualOrAssign=52,
            Less=53, LessEqual=54, Greater=55, GreaterEqual=56, NotEqual=57, Count=58,
            Average=59, Max=60, Min=61, Sum=62, Null=63, Identifier=64, Integer=65,
            String=66, Float=67, Whitespace=68, Annotation=69;
    public static final int
            RULE_program = 0, RULE_statement = 1, RULE_db_statement = 2, RULE_io_statement = 3,
            RULE_table_statement = 4, RULE_select_table = 5, RULE_alter_statement = 6,
            RULE_field_list = 7, RULE_field = 8, RULE_type_ = 9, RULE_value_lists = 10,
            RULE_value_list = 11, RULE_value = 12, RULE_where_and_clause = 13, RULE_where_clause = 14,
            RULE_column = 15, RULE_expression = 16, RULE_set_clause = 17, RULE_selectors = 18,
            RULE_selector = 19, RULE_identifiers = 20, RULE_operator_ = 21, RULE_aggregator = 22;
    private static String[] makeRuleNames() {
        return new String[] {
                "program", "statement", "db_statement", "io_statement", "table_statement",
                "select_table", "alter_statement", "field_list", "field", "type_", "value_lists",
                "value_list", "value", "where_and_clause", "where_clause", "column",
                "expression", "set_clause", "selectors", "selector", "identifiers", "operator_",
                "aggregator"
        };
    }
    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[] {
                null, "';'", "'CREATE'", "'DATABASE'", "'DROP'", "'SHOW'", "'DATABASES'",
                "'USE'", "'TABLES'", "'INDEXES'", "'LOAD'", "'FROM'", "'FILE'", "'TO'",
                "'TABLE'", "'DUMP'", "'('", "')'", "'DESC'", "'INSERT'", "'INTO'", "'VALUES'",
                "'DELETE'", "'WHERE'", "'UPDATE'", "'SET'", "'SELECT'", "'GROUP'", "'BY'",
                "'LIMIT'", "'OFFSET'", "'ALTER'", "'ADD'", "'INDEX'", "'PRIMARY'", "'KEY'",
                "'FOREIGN'", "'CONSTRAINT'", "'REFERENCES'", "'UNIQUE'", "','", "'NOT'",
                "'DEFAULT'", "'INT'", "'VARCHAR'", "'FLOAT'", "'AND'", "'IS'", "'IN'",
                "'LIKE'", "'.'", "'*'", "'='", "'<'", "'<='", "'>'", "'>='", "'<>'",
                "'COUNT'", "'AVG'", "'MAX'", "'MIN'", "'SUM'", "'NULL'"
        };
    }
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static String[] makeSymbolicNames() {
        return new String[] {
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, "EqualOrAssign", "Less", "LessEqual", "Greater",
                "GreaterEqual", "NotEqual", "Count", "Average", "Max", "Min", "Sum",
                "Null", "Identifier", "Integer", "String", "Float", "Whitespace", "Annotation"
        };
    }
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() { return "SQL.g4"; }

    @Override
    public String[] getRuleNames() { return ruleNames; }

    @Override
    public String getSerializedATN() { return _serializedATN; }

    @Override
    public ATN getATN() { return _ATN; }

    public SQLParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
    }

    public static class ProgramContext extends ParserRuleContext {
        public TerminalNode EOF() { return getToken(SQLParser.EOF, 0); }
        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }
        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class,i);
        }
        public ProgramContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_program; }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitProgram(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(49);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__3) | (1L << T__4) | (1L << T__6) | (1L << T__9) | (1L << T__14) | (1L << T__17) | (1L << T__18) | (1L << T__21) | (1L << T__23) | (1L << T__25) | (1L << T__30) | (1L << Null))) != 0) || _la==Annotation) {
                    {
                        {
                            setState(46);
                            statement();
                        }
                    }
                    setState(51);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(52);
                match(EOF);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class StatementContext extends ParserRuleContext {
        public Db_statementContext db_statement() {
            return getRuleContext(Db_statementContext.class,0);
        }
        public Io_statementContext io_statement() {
            return getRuleContext(Io_statementContext.class,0);
        }
        public Table_statementContext table_statement() {
            return getRuleContext(Table_statementContext.class,0);
        }
        public Alter_statementContext alter_statement() {
            return getRuleContext(Alter_statementContext.class,0);
        }
        public TerminalNode Annotation() { return getToken(SQLParser.Annotation, 0); }
        public TerminalNode Null() { return getToken(SQLParser.Null, 0); }
        public StatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_statement; }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_statement);
        try {
            setState(70);
            _errHandler.sync(this);
            switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(54);
                    db_statement();
                    setState(55);
                    match(T__0);
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(57);
                    io_statement();
                    setState(58);
                    match(T__0);
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(60);
                    table_statement();
                    setState(61);
                    match(T__0);
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(63);
                    alter_statement();
                    setState(64);
                    match(T__0);
                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(66);
                    match(Annotation);
                    setState(67);
                    match(T__0);
                }
                break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(68);
                    match(Null);
                    setState(69);
                    match(T__0);
                }
                break;
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Db_statementContext extends ParserRuleContext {
        public Db_statementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_db_statement; }

        public Db_statementContext() { }
        public void copyFrom(Db_statementContext ctx) {
            super.copyFrom(ctx);
        }
    }
    public static class Show_dbsContext extends Db_statementContext {
        public Show_dbsContext(Db_statementContext ctx) { copyFrom(ctx); }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitShow_dbs(this);
            else return visitor.visitChildren(this);
        }
    }
    public static class Drop_dbContext extends Db_statementContext {
        public TerminalNode Identifier() { return getToken(SQLParser.Identifier, 0); }
        public Drop_dbContext(Db_statementContext ctx) { copyFrom(ctx); }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitDrop_db(this);
            else return visitor.visitChildren(this);
        }
    }
    public static class Show_tablesContext extends Db_statementContext {
        public Show_tablesContext(Db_statementContext ctx) { copyFrom(ctx); }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitShow_tables(this);
            else return visitor.visitChildren(this);
        }
    }
    public static class Create_dbContext extends Db_statementContext {
        public TerminalNode Identifier() { return getToken(SQLParser.Identifier, 0); }
        public Create_dbContext(Db_statementContext ctx) { copyFrom(ctx); }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitCreate_db(this);
            else return visitor.visitChildren(this);
        }
    }
    public static class Use_dbContext extends Db_statementContext {
        public TerminalNode Identifier() { return getToken(SQLParser.Identifier, 0); }
        public Use_dbContext(Db_statementContext ctx) { copyFrom(ctx); }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitUse_db(this);
            else return visitor.visitChildren(this);
        }
    }
    public static class Show_indexesContext extends Db_statementContext {
        public Show_indexesContext(Db_statementContext ctx) { copyFrom(ctx); }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitShow_indexes(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Db_statementContext db_statement() throws RecognitionException {
        Db_statementContext _localctx = new Db_statementContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_db_statement);
        try {
            setState(86);
            _errHandler.sync(this);
            switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
                case 1:
                    _localctx = new Create_dbContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(72);
                    match(T__1);
                    setState(73);
                    match(T__2);
                    setState(74);
                    match(Identifier);
                }
                break;
                case 2:
                    _localctx = new Drop_dbContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(75);
                    match(T__3);
                    setState(76);
                    match(T__2);
                    setState(77);
                    match(Identifier);
                }
                break;
                case 3:
                    _localctx = new Show_dbsContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(78);
                    match(T__4);
                    setState(79);
                    match(T__5);
                }
                break;
                case 4:
                    _localctx = new Use_dbContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                {
                    setState(80);
                    match(T__6);
                    setState(81);
                    match(Identifier);
                }
                break;
                case 5:
                    _localctx = new Show_tablesContext(_localctx);
                    enterOuterAlt(_localctx, 5);
                {
                    setState(82);
                    match(T__4);
                    setState(83);
                    match(T__7);
                }
                break;
                case 6:
                    _localctx = new Show_indexesContext(_localctx);
                    enterOuterAlt(_localctx, 6);
                {
                    setState(84);
                    match(T__4);
                    setState(85);
                    match(T__8);
                }
                break;
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Io_statementContext extends ParserRuleContext {
        public Io_statementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_io_statement; }

        public Io_statementContext() { }
        public void copyFrom(Io_statementContext ctx) {
            super.copyFrom(ctx);
        }
    }
    public static class Dump_dataContext extends Io_statementContext {
        public TerminalNode String() { return getToken(SQLParser.String, 0); }
        public TerminalNode Identifier() { return getToken(SQLParser.Identifier, 0); }
        public Dump_dataContext(Io_statementContext ctx) { copyFrom(ctx); }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitDump_data(this);
            else return visitor.visitChildren(this);
        }
    }
    public static class Load_dataContext extends Io_statementContext {
        public TerminalNode String() { return getToken(SQLParser.String, 0); }
        public TerminalNode Identifier() { return getToken(SQLParser.Identifier, 0); }
        public Load_dataContext(Io_statementContext ctx) { copyFrom(ctx); }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitLoad_data(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Io_statementContext io_statement() throws RecognitionException {
        Io_statementContext _localctx = new Io_statementContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_io_statement);
        try {
            setState(102);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__9:
                    _localctx = new Load_dataContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(88);
                    match(T__9);
                    setState(89);
                    match(T__10);
                    setState(90);
                    match(T__11);
                    setState(91);
                    match(String);
                    setState(92);
                    match(T__12);
                    setState(93);
                    match(T__13);
                    setState(94);
                    match(Identifier);
                }
                break;
                case T__14:
                    _localctx = new Dump_dataContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(95);
                    match(T__14);
                    setState(96);
                    match(T__12);
                    setState(97);
                    match(T__11);
                    setState(98);
                    match(String);
                    setState(99);
                    match(T__10);
                    setState(100);
                    match(T__13);
                    setState(101);
                    match(Identifier);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Table_statementContext extends ParserRuleContext {
        public Table_statementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_table_statement; }

        public Table_statementContext() { }
        public void copyFrom(Table_statementContext ctx) {
            super.copyFrom(ctx);
        }
    }
    public static class Delete_from_tableContext extends Table_statementContext {
        public TerminalNode Identifier() { return getToken(SQLParser.Identifier, 0); }
        public Where_and_clauseContext where_and_clause() {
            return getRuleContext(Where_and_clauseContext.class,0);
        }
        public Delete_from_tableContext(Table_statementContext ctx) { copyFrom(ctx); }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitDelete_from_table(this);
            else return visitor.visitChildren(this);
        }
    }
    public static class Insert_into_tableContext extends Table_statementContext {
        public TerminalNode Identifier() { return getToken(SQLParser.Identifier, 0); }
        public Value_listsContext value_lists() {
            return getRuleContext(Value_listsContext.class,0);
        }
        public Insert_into_tableContext(Table_statementContext ctx) { copyFrom(ctx); }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitInsert_into_table(this);
            else return visitor.visitChildren(this);
        }
    }
    public static class Create_tableContext extends Table_statementContext {
        public TerminalNode Identifier() { return getToken(SQLParser.Identifier, 0); }
        public Field_listContext field_list() {
            return getRuleContext(Field_listContext.class,0);
        }
        public Create_tableContext(Table_statementContext ctx) { copyFrom(ctx); }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitCreate_table(this);
            else return visitor.visitChildren(this);
        }
    }
    public static class Describe_tableContext extends Table_statementContext {
        public TerminalNode Identifier() { return getToken(SQLParser.Identifier, 0); }
        public Describe_tableContext(Table_statementContext ctx) { copyFrom(ctx); }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitDescribe_table(this);
            else return visitor.visitChildren(this);
        }
    }
    public static class Select_table_Context extends Table_statementContext {
        public Select_tableContext select_table() {
            return getRuleContext(Select_tableContext.class,0);
        }
        public Select_table_Context(Table_statementContext ctx) { copyFrom(ctx); }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitSelect_table_(this);
            else return visitor.visitChildren(this);
        }
    }
    public static class Drop_tableContext extends Table_statementContext {
        public TerminalNode Identifier() { return getToken(SQLParser.Identifier, 0); }
        public Drop_tableContext(Table_statementContext ctx) { copyFrom(ctx); }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitDrop_table(this);
            else return visitor.visitChildren(this);
        }
    }
    public static class Update_tableContext extends Table_statementContext {
        public TerminalNode Identifier() { return getToken(SQLParser.Identifier, 0); }
        public Set_clauseContext set_clause() {
            return getRuleContext(Set_clauseContext.class,0);
        }
        public Where_and_clauseContext where_and_clause() {
            return getRuleContext(Where_and_clauseContext.class,0);
        }
        public Update_tableContext(Table_statementContext ctx) { copyFrom(ctx); }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitUpdate_table(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Table_statementContext table_statement() throws RecognitionException {
        Table_statementContext _localctx = new Table_statementContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_table_statement);
        try {
            setState(134);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__1:
                    _localctx = new Create_tableContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(104);
                    match(T__1);
                    setState(105);
                    match(T__13);
                    setState(106);
                    match(Identifier);
                    setState(107);
                    match(T__15);
                    setState(108);
                    field_list();
                    setState(109);
                    match(T__16);
                }
                break;
                case T__3:
                    _localctx = new Drop_tableContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(111);
                    match(T__3);
                    setState(112);
                    match(T__13);
                    setState(113);
                    match(Identifier);
                }
                break;
                case T__17:
                    _localctx = new Describe_tableContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(114);
                    match(T__17);
                    setState(115);
                    match(Identifier);
                }
                break;
                case T__18:
                    _localctx = new Insert_into_tableContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                {
                    setState(116);
                    match(T__18);
                    setState(117);
                    match(T__19);
                    setState(118);
                    match(Identifier);
                    setState(119);
                    match(T__20);
                    setState(120);
                    value_lists();
                }
                break;
                case T__21:
                    _localctx = new Delete_from_tableContext(_localctx);
                    enterOuterAlt(_localctx, 5);
                {
                    setState(121);
                    match(T__21);
                    setState(122);
                    match(T__10);
                    setState(123);
                    match(Identifier);
                    setState(124);
                    match(T__22);
                    setState(125);
                    where_and_clause();
                }
                break;
                case T__23:
                    _localctx = new Update_tableContext(_localctx);
                    enterOuterAlt(_localctx, 6);
                {
                    setState(126);
                    match(T__23);
                    setState(127);
                    match(Identifier);
                    setState(128);
                    match(T__24);
                    setState(129);
                    set_clause();
                    setState(130);
                    match(T__22);
                    setState(131);
                    where_and_clause();
                }
                break;
                case T__25:
                    _localctx = new Select_table_Context(_localctx);
                    enterOuterAlt(_localctx, 7);
                {
                    setState(133);
                    select_table();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Select_tableContext extends ParserRuleContext {
        public SelectorsContext selectors() {
            return getRuleContext(SelectorsContext.class,0);
        }
        public IdentifiersContext identifiers() {
            return getRuleContext(IdentifiersContext.class,0);
        }
        public Where_and_clauseContext where_and_clause() {
            return getRuleContext(Where_and_clauseContext.class,0);
        }
        public ColumnContext column() {
            return getRuleContext(ColumnContext.class,0);
        }
        public List<TerminalNode> Integer() { return getTokens(SQLParser.Integer); }
        public TerminalNode Integer(int i) {
            return getToken(SQLParser.Integer, i);
        }
        public Select_tableContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_select_table; }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SQLVisitor ) return ((SQLVisitor<? extends T>)visitor).visitSelect_table(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Select_tableContext select_table() throws RecognitionException {
        Select_tableContext _localctx = new Select_tableContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_select_table);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(136);
                match(T__25);
                setState(137);
                selectors();
                setState(138);
                match(T__10);
                setState(139);
                identifiers();
                setState(142);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la==T__22) {
                    {
                        setState(140);
                        match(T__22);
                        setState(141);
                        where_and_clause();
                    }
                }

                setState(147);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la==T__26) {
                    {
                        setState(144);
                        match(T__26);
                        setState(145);
                        match(T__27);
                        setState(146);
                        column();
                    }
                }

                setState(155);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la==T__28) {
                    {
                        setState(149);
                        match(T__28);
                        setState(150);
                        match(Integer);
                        setState(153);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if (_la==T__29) {
                            {
                                setState(151);
                                match(T__29);
                                setState(152);
                                match(Integer);
                            }
                        }

                    }
                }

            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Alter_statementContext extends ParserRuleContext {
        public Alter_statementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_alter_statement; }
